--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
-<h1>welcome to my world<hi>
-  </body>
+<h1>welcome to my world<h1>
+<h1>it is very interesting <h1>
+</body>
   </html>
